@@ -1,3 +1,6 @@
 class Sys::Time {
-
+  use Sys::Time::Timeval;
+  use Sys::Time::Timezone;
+  
+  native static method gettimeofday : int ($tv : Sys::Time::Timeval, $tz : Sys::Time::Timezone);
 }
